@@ -1,3 +1,7 @@
+2016-03-17  Senthil Kumar Selvaraj <senthil_kumar.selvaraj@atmel.com>
+
+	* crt1/gcrt1.S: Weakly define __FUSE_REGION_LENGTH__.
+
 2016-02-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* configure.ac: Post-release 2.0.0.
